--- a/search-page.html
+++ b/search-page.html
@@ -125,8 +125,31 @@
                 </center>
             </form>
         </div>
+        <div class="list-pict">
+            <a class="col" href="sumatra.html">
+                <div class="card">
+                    <img class="card-image "src="img/sum.jpg" alt="Sumatera">
+                    <div class="card-title">Java</div>
+                    <div class="card-description">Javanese Cuisines</div>
+                </div>
+            </a>
+            <a class="col" href="java.html">
+                <div class="card">
+                    <img class="card-image" src="img/java.jpg" alt="Java">
+                    <div class="card-title">Java</div>
+                    <div class="card-description">Javanese Cuisines</div>
+                </div>
+            </a>
+            <a class="col" href="borneo.html">
+                <div class="card">
+                    <img class="card-image" src="img/borneo.jpg" alt="Borneo">
+                    <div class="card-title">Borneo</div>
+                    <div class="card-description">Borneo Cuisines</div>
+                </div>
+            </a>
+        </div>
         <div class="search-title">
-            <h2>Search for a Recipe</h2>
+            <h2>Cannot find recipe what your looking for?</h2>
         </div>
         <div class="wrapper">
             <div class="search-input">
