--- a/about-us.html
+++ b/about-us.html
@@ -122,12 +122,14 @@
           <div class="slider">
             <div class="slide slide--1">
               <div class="testimonial">
-                <h5 class="testimonial__header">ini isi gak?</h5>
+                <h5 class="testimonial__header">
+                  Albert Agung Andika
+                </h5>
                 <img src="img/sample.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <h6 class="testimonial__name">Albert Agung</h6>
-                  <p class="testimonial__location">Bekasi, Jakarta</p>
-                  <p class="testimonial__text"> Job Desc Person 1</p>
+                  <h6 class="testimonial__name">5027201069</h6>
+                  <p class="testimonial__location">Bogor, Jawa Barat</p>
+                  <p class="testimonial__text">Albert is responsible in making/creating yaa (?) the JavaScript and PHP in this website. He try to make this website runs well.</p>
                 </address>
               </div>
             </div>
@@ -135,13 +137,13 @@
             <div class="slide slide--2">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  The last step to becoming a complete minimalist
+                  Adinda Putri Audyna
                 </h5>
-                <img src="img/sample.png" alt="" class="testimonial__photo" />
+                <img src="nde.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <h6 class="testimonial__name">Adinda Putri</h6>
+                  <h6 class="testimonial__name">5027201073</h6>
                   <p class="testimonial__location">Purwakarta, Jawa Barat</p>
-                  <p class="testimonial__text"> Job Desc Person 1</p>
+                  <p class="testimonial__text">Adinda is responsible in making the CSS in this website. She makes this website more colorful and enjoyable.</p>
                 </address>
               </div>
             </div>
@@ -149,13 +151,13 @@
             <div class="slide slide--3">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  Finally free from old-school banks
+                  Banabil Fawazaim Muhammad
                 </h5>
-                <img src="img/sample.png" alt="" class="testimonial__photo" />
+                <img src="banabil.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <h6 class="testimonial__name">Banabil FM</h6>
-                  <p class="testimonial__location">Kalimantan</p>
-                  <p class="testimonial__text"> Job Desc Person 1</p>
+                  <h6 class="testimonial__name">5027201055</h6>
+                  <p class="testimonial__location">Kutai Timur, Kalimantan Timur</p>
+                  <p class="testimonial__text">Banabil is responsible in making the HTML in this website. He makes the content of this website insightful.</p>
                 </address>
               </div>
             </div>
@@ -163,13 +165,13 @@
             <div class="slide slide--4">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  Finally free from old-school banks
+                  Anak Agung Bintang Krisna Dewi
                 </h5>
-                <img src="img/sample.png" alt="" class="testimonial__photo" />
+                <img src="gek.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <h6 class="testimonial__name">Bintang Krisna</h6>
+                  <h6 class="testimonial__name">5027201060</h6>
                   <p class="testimonial__location">Denpasar,Bali</p>
-                  <p class="testimonial__text"> Job Desc Person 1</p>
+                  <p class="testimonial__text">Bintang is responsible in making the HTML in this website. She makes the content of this website more clearer and on point.</p>
                 </address>
               </div>
             </div>
@@ -177,13 +179,13 @@
             <div class="slide slide--4">
               <div class="testimonial">
                 <h5 class="testimonial__header">
-                  Finally free from old-school banks
+                  I Putu Windy Arya Sagita
                 </h5>
-                <img src="img/sample.png" alt="" class="testimonial__photo" />
+                <img src="windy.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
-                  <h6 class="testimonial__name">Windy Arya</h6>
+                  <h6 class="testimonial__name">5027201071</h6>
                   <p class="testimonial__location">Gianyar, Bali</p>
-                  <p class="testimonial__text"> Job Desc Person 1</p>
+                  <p class="testimonial__text">Windy is responsible in making the CSS in this website. He makes this website responsive and easy to use.</p>
                 </address>
               </div>
             </div>
