--- a/about-us.html
+++ b/about-us.html
@@ -125,7 +125,7 @@
                 <h5 class="testimonial__header">
                   Albert Agung Andika
                 </h5>
-                <img src="img/sample.png" alt="" class="testimonial__photo" />
+                <img src="abe.png" alt="" class="testimonial__photo" />
                 <address class="testimonial__author">
                   <h6 class="testimonial__name">5027201069</h6>
                   <p class="testimonial__location">Bogor, Jawa Barat</p>
