--- a/search-page.html
+++ b/search-page.html
@@ -1,3 +1,4 @@
+<!--Ini versi yang foto makanannya di atas dan search barnya di bawahnya-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -125,28 +126,28 @@
                 </center>
             </form>
         </div>
-        <div class="list-pict">
-            <a class="col" href="sumatra.html">
-                <div class="card">
-                    <img class="card-image "src="img/sum.jpg" alt="Sumatera">
-                    <div class="card-title">Java</div>
-                    <div class="card-description">Javanese Cuisines</div>
-                </div>
-            </a>
-            <a class="col" href="java.html">
-                <div class="card">
-                    <img class="card-image" src="img/java.jpg" alt="Java">
-                    <div class="card-title">Java</div>
-                    <div class="card-description">Javanese Cuisines</div>
-                </div>
-            </a>
-            <a class="col" href="borneo.html">
-                <div class="card">
-                    <img class="card-image" src="img/borneo.jpg" alt="Borneo">
-                    <div class="card-title">Borneo</div>
-                    <div class="card-description">Borneo Cuisines</div>
-                </div>
-            </a>
+        <div class="list-title">
+            <h2>Javanese Recipes</h2>
+        </div>
+        <div class="cards-list">
+            <div class="card 1">
+              <div class="card_image"><img src="img/sample.png"></div>
+              <div class="card_title title-white">
+                <p>Card Title</p>
+              </div>
+            </div>
+            <div class="card 2">
+              <div class="card_image"><img src="img/sample.png"></div>
+              <div class="card_title title-white">
+                <p>Card Title</p>
+              </div>
+            </div>
+            <div class="card 3">
+              <div class="card_image"><img src="img/sample.png"></div>
+              <div class="card_title">
+                <p>Card Title</p>
+              </div>
+            </div>
         </div>
         <div class="search-title">
             <h2>Cannot find recipe what your looking for?</h2>
